chore(github)issue template
* bug.yml add labels
* feature.yml add template

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,5 +1,6 @@
 name: 🐛 Bug Report For JSA
 description: Report an issue if something isn't working as expected 🤔.
+labels: [ bug ]
 body:
   - type: markdown
     attributes:
