--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -10,11 +10,10 @@ body:
         as you're able. If you are reporting a visual glitch, it will be much easier
         for us to fix it when you attach a screenshot as well.
   - type: input
-  - type: input
     attributes:
       label: "OS name"
       description: What is your OS?
-      placeholder: Macos
+      placeholder: MacOS
     validations:
       required: true
   - type: input
@@ -34,5 +33,3 @@ body:
         4. If possible, images or videos are welcome.
     validations:
       required: true
-
-# Inspired by the nodejs.dev issue template
