core(npm): update tag

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "keywords": [
     "javascript",
     "ECMA",
-    "Literal template"
+    "Literal template",
+    "jsalpha"
   ],
   "author": "AugustinMauroy",
   "license": "MIT",
